[project]
name = "pubmed_fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed with pharmaceutical/biotech company authors"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
